# etl-training

./: .gitignore  01-Prepare-Data.ipynb  02-Upload-To-GCS-And-BigQuery.ipynb  prepare_data.py  pyproject.toml  readme.md  upload_to_gcs.py
data/: exam_grades.csv
